# axum-typed-routing

./: .gitignore  Cargo.toml  README.md
axum-typed-routing/: Cargo.toml
axum-typed-routing-macros/: Cargo.toml  README.md
axum-typed-routing-macros/src/: compilation.rs  lib.rs  parsing.rs
axum-typed-routing/examples/: aide.rs  basic.rs
axum-typed-routing/src/: lib.rs
axum-typed-routing/tests/: main.rs
