[package]
name = "axum-typed-routing-macros"
version = "0.1.2"
edition = "2021"
license = "MIT OR Apache-2.0"
keywords = ["axum", "routing", "handler", "typed", "macro"]
categories = ["web-programming"]
description = "Typed routing macros for axum"
homepage = "https://github.com/jvdwrf/axum-typed-routing"
repository = "https://github.com/jvdwrf/axum-typed-routing"
readme = "../README.md"

[dependencies]
syn = { version = "2", features = ["full"] }
quote = "1"
proc-macro2 = "1"

[dev-dependencies]
axum = { version = "0.6", features = [] }
aide = { version = "0.12", features = ["axum"] }


[lib]
proc-macro = true