[package]
name = "axum-typed-routing"
version = "0.1.2"
edition = "2021"
license = "MIT OR Apache-2.0"
keywords = ["axum", "routing", "handler", "typed", "macro"]
categories = ["web-programming"]
description = "Typed routing macros for axum"
homepage = "https://github.com/jvdwrf/axum-typed-routing"
repository = "https://github.com/jvdwrf/axum-typed-routing"
readme = "../README.md"

[package.metadata.docs.rs]
features = ["aide"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6"
axum-macros = "0.3"
aide = { version = "0.12", features = ["axum"], optional = true }
axum-typed-routing-macros = {version = "0.1", path = "../axum-typed-routing-macros" }

[features]
default = []
aide = ["dep:aide"]