[package]
name = "axum-typed-routing"
version = "0.2.0"
edition = "2021"
license = "MIT OR Apache-2.0"
keywords = ["axum", "routing", "handler", "typed", "macro"]
categories = ["web-programming"]
description = "Typed routing macros for axum"
homepage = "https://github.com/jvdwrf/axum-typed-routing"
repository = "https://github.com/jvdwrf/axum-typed-routing"
readme = "../README.md"

[package.metadata.docs.rs]
features = ["aide"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7"
axum-macros = "0.4"
aide = { version = "0.13", features = ["axum"], optional = true }
axum-typed-routing-macros = { version = "0.2.0", path = "../axum-typed-routing-macros" }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
axum-test = { version = "14", features = [] }
serde = { version = "1", features = ["derive"] }
json = "0.12"
schemars = "0.8"

[features]
default = []
aide = ["dep:aide"]